--- a/css/style.css
+++ b/css/style.css
@@ -117,30 +117,16 @@ a:focus {
   height: 100%;
 }
 
-/* Video Background Styles */
-.video-container {
-  position: absolute;
-  top: 0;
-  left: 0;
+.bg-box img {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
-.bg-box iframe {
-  width: 100vw;
-  height: 56.25vw;
-  /* Given a 16:9 aspect ratio, 9/16*100 = 56.25 */
-  min-height: 100vh;
-  min-width: 177.77vh;
-  /* Given a 16:9 aspect ratio, 16/9*100 = 177.77 */
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  pointer-events: none;
-  /* Prevent user interaction */
-  object-fit: cover;
+pointer-events: none;
+/* Prevent user interaction */
+object-fit: cover;
 }
 
 /* New overlay to make text readable */
